--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
-  "homepage": "https://haikyuu.github.io"
+  "homepage": "https://haikyuu.github.io/shells"
 }
